--- a/resources/sass/frontend/form/_input.scss
+++ b/resources/sass/frontend/form/_input.scss
@@ -8,9 +8,9 @@ input {
 }
 
 .select-wrapper {
-  background-color: $color-dark-green;
-  border: 1px solid $color-dark-green;
-  border-radius: 2px;
+  background-color: $color-beige;
+  border: none;
+  border-radius: 3px;
   color: $color-white;
   display: inline-block;
   position: relative;
@@ -21,12 +21,16 @@ input {
   }
 
 	select {
-    background-color: $color-dark-green;
-    border: 1px solid $color-dark-green;
-    color: $color-white;
+    background-color: $color-beige;
+    border: none;
+    color: $color-dark-green;
     display: block;
-    padding: 9px 10px;
-    text-transform: uppercase;
+    height: 36px;
+    padding: 8px 10px;
     width: 100%;
+
+    @include bp-lg() {
+      height: 40px;
+    }
   }
 }
