--- a/resources/sass/frontend/form/_label.scss
+++ b/resources/sass/frontend/form/_label.scss
@@ -9,7 +9,7 @@ label {
     padding-left: 5px;
 
     &.is-title {
-        color: $color-dark-green;
+        color: $color-white;
         display: block;
         @include font-nort-bold();
         margin-bottom: 12px;
