--- a/resources/sass/backend/config/_colors.scss
+++ b/resources/sass/backend/config/_colors.scss
@@ -7,8 +7,8 @@
 $color--black: #000000;
 $color--white: #ffffff;
 
-$color--dark:  #759178;
-$color--light: #a9c8a6;
+$color--dark:  #5D7975;
+$color--light: #5D7975;
 
 // Grey tones
 $color--grey:        #999999;
