--- a/resources/sass/frontend/config/_colors.scss
+++ b/resources/sass/frontend/config/_colors.scss
@@ -9,6 +9,7 @@ $color-white: #ffffff;
 
 $color-dark-green: #5D7975;
 $color-beige: #DDD3C2;
+$color-light-beige: #EEE9E1;
 
 // Old colors
 $color--dark-blue:   #001a45;
