--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -31,6 +31,7 @@
 @import 'components/boxes/global';
 @import 'components/buttons/global';
 @import 'components/buttons/primary';
+@import 'components/buttons/secondary';
 @import 'components/buttons/register';
 @import 'components/buttons/menu';
 @import 'components/buttons/selection';
