--- a/resources/sass/frontend/layout/_footer.scss
+++ b/resources/sass/frontend/layout/_footer.scss
@@ -7,13 +7,13 @@
 footer.site-footer {
   background-color: $color-dark-green;
   color: $color-white;
-  @include font-size($fs-sm);
+  @include font-size($fs-md);
   @include responsive-prop('padding-top', $space-md);
 
   h3 {
     color: $color-beige;
     text-transform: none;
-    @include font-size($fs-sm);
+    @include font-size($fs-md);
   }
   
   a {
