--- a/resources/sass/frontend/components/alerts/_success.scss
+++ b/resources/sass/frontend/components/alerts/_success.scss
@@ -11,7 +11,7 @@
   width: auto;
 
   > div {
-    background-color: $color-dark-green;
+    background-color: $color-green;
     color: $color-white;
     @include font-nort-bold();
     @include font-size($fs-sm);
@@ -21,7 +21,7 @@
 }
 
 .alert-success {
-  background-color: $color-dark-green;
+  background-color: $color-green;
   color: $color-white;
   @include font-nort-bold();
   padding: 5px;
