--- a/resources/sass/frontend/components/buttons/_primary.scss
+++ b/resources/sass/frontend/components/buttons/_primary.scss
@@ -31,7 +31,7 @@ input[type=submit].btn-primary,
 
   &.is-reset {
     background-color: $color-light-beige;
-    color: $color-dark-green !important;
+    color: $color-green !important;
     text-align: left !important;
     justify-content: flex-start !important;
 
