--- a/resources/sass/frontend/components/buttons/_register.scss
+++ b/resources/sass/frontend/components/buttons/_register.scss
@@ -20,5 +20,5 @@
 }
 
 .apartements.apartements--selection .btn-register {
-  color: $color-dark-green !important;
+  color: $color-green !important;
 }
