--- a/resources/sass/frontend/config/_colors.scss
+++ b/resources/sass/frontend/config/_colors.scss
@@ -7,7 +7,8 @@
 $color-black: #000000;
 $color-white: #ffffff;
 
-$color-dark-green: #5D7975;
+$color-green: #5D7975;
+$color-dark-green: #4f6663;
 $color-beige: #DDD3C2;
 $color-light-beige: #EEE9E1;
 
