--- a/resources/sass/frontend/form/_input.scss
+++ b/resources/sass/frontend/form/_input.scss
@@ -23,7 +23,7 @@ input {
 	select {
     background-color: $color-beige;
     border: none;
-    color: $color-dark-green;
+    color: $color-green;
     display: block;
     height: 36px;
     padding: 8px 10px;
