--- a/resources/sass/frontend/navigation/_site.scss
+++ b/resources/sass/frontend/navigation/_site.scss
@@ -55,7 +55,7 @@ nav.site-nav {
   }
 
   a {
-    color: $color-dark-green;
+    color: $color-green;
     @include font-nort-bold();
     display: block;
     letter-spacing: 0.05em;
