--- a/resources/sass/frontend/form/_global.scss
+++ b/resources/sass/frontend/form/_global.scss
@@ -9,9 +9,9 @@ input[type=number],
 input[type=password],
 textarea,
 select {
-	background-color: $color-dark-green;
+	background-color: $color-green;
 	border-radius: 2px;
-	border: 1px solid $color-dark-green;
+	border: 1px solid $color-green;
 	color: $color-white;
 	display: block;
 	@include font-size($fs-md);
@@ -51,7 +51,7 @@ select::-ms-expand {
 }
 
 // input[type=submit] {
-// 	background-color: $color-dark-green;
+// 	background-color: $color-green;
 // 	border-color: transparent;
 // 	border-radius: 2px;
 // 	color: $color-white;
@@ -70,7 +70,7 @@ select::-ms-expand {
 // }
 
 input[type="checkbox"] + label {
-  color: $color-dark-green !important;
+  color: $color-green !important;
   cursor: pointer;
   position: absolute;
 }
@@ -92,7 +92,7 @@ input[type="checkbox"] + label::before {
 	border-radius: 2px;
   width: 14px;
   height: 14px;
-  background-color: $color-dark-green;
+  background-color: $color-green;
   display: block;
   content: "";
   float: left;
