--- a/resources/sass/frontend/theme/_logo.scss
+++ b/resources/sass/frontend/theme/_logo.scss
@@ -6,7 +6,7 @@
  */
 
 .logo {
-  background-color: $color-dark-green;
+  background-color: $color-green;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   align-items: flex-start;
