--- a/resources/sass/frontend/components/buttons/_secondary.scss
+++ b/resources/sass/frontend/components/buttons/_secondary.scss
@@ -19,7 +19,7 @@ a.btn-secondary {
   justify-content: center;
   text-align: center;
   text-decoration: none !important;
-  transition: background-color .1s ease-in;
+  transition: all .1s ease-in;
 	-webkit-appearance: none;
 	-webkit-tap-highlight-color: $color-white;
 
