--- a/resources/sass/frontend/components/tables/_apartements.scss
+++ b/resources/sass/frontend/components/tables/_apartements.scss
@@ -30,7 +30,10 @@ table.apartements {
 
   td {
     @include font-size($fs-xs);
-    padding: 5px 7px 5px 0;
+    padding: 10px 7px 10px 0;
+    @include bp-md() {
+      padding: 5px 7px 5px 0;
+    }
   }
 
   th, td {
@@ -144,5 +147,52 @@ table.apartements {
     margin-bottom: 10px;
     padding: 0;
     text-transform: uppercase;
+  }
+}
+
+.apartment-details {
+  background-color: $color-beige;
+  box-shadow: 0 0 25px rgba($color-black, 0.15);
+  color: $color-green;
+  bottom: 0;
+  left: 0;
+  display: none;
+  padding: 20px 15px 20px 15px;
+  position: fixed;
+  width: 100%;
+  z-index: 200;
+
+  h3 {
+    margin-bottom: 3px;
+  }
+
+  span {
+    display: block;
+    margin-bottom: 25px;
+  }
+
+  a {
+    color: $color-green !important;
+    display: block;
+    margin-top: 5px;
+    &:first-of-type {
+      margin-right: 10px;
+    }
+  }
+
+  &.is-visible {
+    display: block;
+
+    > div {
+      display: grid;
+      grid-template-columns: .75fr 1fr;
+      align-items: flex-end;
+      gap: 10px;
+    }
+
+  }
+
+  @include bp-md() {
+    display: none !important;
   }
 }
