--- a/resources/sass/frontend/components/tables/_apartements.scss
+++ b/resources/sass/frontend/components/tables/_apartements.scss
@@ -116,6 +116,7 @@ table.apartements {
 
 .apartements-selection {
   background-color: $color-beige;
+  box-shadow: 0 0 25px rgba($color-black, 0.15);
   color: $color-green;
   bottom: 0;
   left: 0;
@@ -157,7 +158,7 @@ table.apartements {
   bottom: 0;
   left: 0;
   display: none;
-  padding: 20px 15px 20px 15px;
+  padding: 15px 15px 15px 15px;
   position: fixed;
   width: 100%;
   z-index: 200;
@@ -168,7 +169,7 @@ table.apartements {
 
   span {
     display: block;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
 
   a {
@@ -187,6 +188,7 @@ table.apartements {
       display: grid;
       grid-template-columns: .75fr 1fr;
       align-items: flex-end;
+      max-width: 90%;
       gap: 10px;
     }
 
